Tiredness Json Greatly reduced Energy boost effectiveness Increased Energy Boost default duration by 5x (and made it configurable)